feat(LLM): add model service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,16 @@ services:
       - DJANGO_DB_NAME=db
       - DJANGO_DB_USER=userdb
       - DJANGO_DB_PASSWORD=passworddb
+    
+    model:
+      build: 
+        context: ./LLM
+        args:
+          MODEL_PATH: "models/bert-base-uncased/checkpoint-4000"
+      ports:
+        - "8080:80"
+      environment:
+        - APP_MODULE=main:app
 
 volumes:
   postgres_data:
