--- a/LLM/app/pyproject.toml
+++ b/LLM/app/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "app"}]
 python = "==3.11.*"
 fastapi = "^0.115.0"
 transformers = "^4.38.0"
+torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.3.0%2Bcu118-cp311-cp311-linux_x86_64.whl" }
 
 [build-system]
 requires = ["poetry-core>=1.7.0"]
